Update deprecated references